<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Начать работу</string>
    <string name="skip">Пропустить</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="note">Заметки</string>
    <string name="plus">+</string>
    <string name="search">Поиск заметок</string>
    <string name="finish">Готово</string>
    <string name="title">Название</string>
    <string name="reg">Регистрация по номеру</string>
    <string name="number">+996 707 777 777</string>
    <string name="your_code">Ваш код</string>
    <string name="get_code">Получить код</string>
    <string name="confirm">Потвердить</string>
    <string name="send_again">Отправить снова</string>
</resources>