<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".ui.fragments.register.RegisterFragment">

    <ImageView
        android:id="@+id/img_notes"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:src="@drawable/ic_notes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/reg"
        android:textColor="#8E8B8B"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_et_phone_number"
        android:drawableStart="@drawable/ic_tel"
        android:drawablePadding="16dp"
        android:hint="@string/number"
        android:paddingHorizontal="10dp" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_et_phone_number"
        android:drawableStart="@drawable/ic_sms_code"
        android:drawablePadding="16dp"
        android:hint="@string/your_code"
        android:paddingHorizontal="10dp" />

    <Button
        android:id="@+id/btn_get_code"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_btn_get_code"
        android:text="@string/get_code" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_btn_get_code"
        android:text="@string/confirm"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_again"
        android:textColor="@color/orange"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"
        android:id="@+id/tv_confirm"/>


</FrameLayout>